--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@ code {
   z-index: 1000;
 }
 
+.leftcol { /* Левая колонка */
+  float: left; /* Обтекание справа */
+  width: 800px; /* Ширина колонки */
+}
+.rightcol { /* Правая колонка */
+  margin-left: 810px; /* Отступ слева */
+}
